plugins/InspectionGadgets/test/com/siyeh/igtest/junit/parameterized/Createmethod.java
@org.<error descr="Cannot resolve symbol 'junit'">junit</error>.runner.RunWith(org.<error descr="Cannot resolve symbol 'junit'">junit</error>.runners.Parameterized.class)
public class <warning descr="Class ParametricRegularExpressionTest annotated @RunWith(Parameterized.class) lacks data provider">ParametricRegularExpressionTest</warning> {}